<resources>
    <string name="app_name">Momentum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="register_text">REGISTER</string>
    <string name="login_text">Sign In</string>
    <string name="register_navigate_text">Click here to Register!</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.cavid22.momentum.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">logout</string>
    <string name="signin_textview">Sign In!</string>
    <string name="register_textview">Register!</string>
    <string name="login_navigate_text">Return to Login!</string>
    <string name="task_id_hint">Enter Task ID</string>
    <string name="task_category_hint">Enter Category</string>
    <string name="task_title_hint">Enter Title</string>

    <string name="task_description_hint">Enter Description</string>
    <string name="task_due_hint">Enter Due Date</string>
    <string name="add_task">Add Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="title_home">Tasks</string>
    <string name="title_add">Add</string>
    <string name="title_about">About</string>
    <string name="error_message" />
    <string name="title_welcome">Home</string>

    <string name="welcome_message">Welcome</string>


</resources>